src/xwayland/clipboard.h
@@ -54,7 +54,6 @@ private:
     QMetaObject::Connection m_checkConnection;
 
     Q_DISABLE_COPY(Clipboard)
-    bool m_waitingForTargets = false;
     std::unique_ptr<XwlDataSource> m_selectionSource;
 };
 
